<resources>
    <string name="app_name">demo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="string">/</string>
    <string name="plm">+/-</string>
    <string name="_9">9</string>
    <string name="ac">AC</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="pc">%</string>
    <string name="x">x</string>
    <string name="mns">-</string>
    <string name="point">.</string>
    <string name="_3">3</string>
    <string name="egal">=</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="pls">+</string>
</resources>